--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -81,3 +81,13 @@
     </div>
   </div>
 </div>
+<div class="cart-fixed brand-primary-bg">
+  <div class="relate">
+    <a href="#/cart" ng-controller="countChange" class="ng-scope">
+      <i class="fa fa-shopping-cart fa-2x white"></i>
+      <div class="bagde round brand-primary-bg">
+        <span class="white ng-binding">0</span>
+      </div>
+    </a>
+  </div>
+</div>
