--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -127,7 +127,7 @@
     <a href="#/cart" ng-controller="countChange" class="ng-scope">
       <i class="fa fa-shopping-cart fa-2x white"></i>
       <div class="bagde round brand-primary-bg">
-        <span class="white ng-binding">0</span>
+        <span class="white ng-binding">{{Count}}</span>
       </div>
     </a>
   </div>
